# ai-vault

handbooks/machine-learning/: main.typ
handbooks/machine-learning/02-univariate-regression-model/: page.typ
handbooks/machine-learning/03-multiple-linear-regression/: page.typ
handbooks/machine-learning/08-testing-ml-models/: page.typ
implementations/reinforcement-learning/: requirements-dev.txt
machine-learning/capstones/reinforcement-learning/: .gitignore  README.md  basic_cartpole.py  cartpole_train.py  pyproject.toml
machine-learning/capstones/reinforcement-learning/src/: cartpole_train.py  main.py
machine-learning/capstones/reinforcement-learning/src/application/: testing_use_case.py  training_use_case.py
machine-learning/capstones/reinforcement-learning/src/domain/: entities.py  q_table.py  state_discretizer.py
machine-learning/handbook/: main.typ
machine-learning/ml-implementation/: .gitignore  pyproject.toml
machine-learning/ml-implementation/src/: linear_regression.py
machine-learning/ml-implementation/src/lib/abc/: model_strategy.py  models.py
machine-learning/ml-implementation/src/lib/managers/: numpy_manager.py
machine-learning/ml-implementation/src/lib/math/: functions.py
machine-learning/ml-implementation/src/regression_models/: linear_regression.py  logistic_regression.py
machine-learning/ml-implementation/test/: test_linear_regression.py  test_logistic_regression.py
machine-learning/ml-implementation/test/lib/math/: test_functions.py
prompt-engineering/handbook/: handbook.typ  works.bib
(+31 files in other folders)
