[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jzurita-ml"
version = "0.1.0"
description = "A machine learning regression project using Python"
authors = [
    { name = "Juan Manuel Zurita Quinteros", email = "juanzq10dev@jalasoft.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy==2.2.6",
]